Update for constructors are deprecated